@@ -1,5 +1,11 @@
 [b]Version 0.6.0rc5[/b]:
 
+(2008-04-27)
+ * Now the time (and volume) sliders should work better. Internally the left 
+   mouse click and the middle button click are swapped. Reason: the middle 
+   button actually does what I want for the left button, jump to the clicked 
+   position. (I know this solution is ugly, but well... it was the easiest)
+
 (2008-04-26)
  * Now the default filter for Open->File is "multimedia", it shows video,
    audio and playlist files.
